# Mistake-Lang

./: .gitignore  LISCENSE  README.md  pyproject.toml  requirements.txt  setup.py
examples/: airtable.mistake  callbacks.mistake  factorial.mistake  fibonacci.mistake  fizzbuzz.mistake  helloworld.mistake  tcp.mistake  testing.mistake  udp_server.mistake
src/: main.py  out.json  runner.py  tests.py  utils.py
src/mistake/: localize.py  main.py  runner.py  tests.py  utils.py
src/mistake/parser/: ast.py  parser.py
src/mistake/runtime/: environment.py  interpreter.py  runtime_types.py
src/mistake/runtime/stdlib/: airtable_api.py  networking.py  std_funcs.py  vulkan_api.py
src/mistake/tokenizer/: lexer.py  token.py
src/parser/: ast.py  parser.py  preprocess.py
src/parser/errors/: parser_errors.py
src/runtime/: environment.py  interpreter.py  runtime_types.py
src/runtime/errors/: runtime_errors.py
src/runtime/stdlib/: std_funcs.py
src/tokenizer/: lexer.py  token.py
src/tokenizer/localizations/: es.json  fr.json
tests/: airtable.mistake  ast.txt  callbacks.mistake  classes.mistake  iama.mistake  main.mistake  other.mistake  t_vulkan.mistake  tcp.mistake  test.mistake  testing.mistake  udp_server.mistake  udp_socket.mistake  vulkan.mistake
