[build-system]
requires = ["setuptools>=63.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mistake-lang"
version = "0.1.5"
description = "A Mistake"
readme = "README.md"
authors = [
    {name = "Elliot", email = "captainexpo@gmail.com"}
]
license = {text = "MIT"}
requires-python = ">=3.7"

dependencies = [
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "charset-normalizer==3.4.1",
    "future==1.0.0",
    "gevent==24.11.1",
    "greenlet==3.1.1",
    "idna==3.10",
    "kp==0.9.0",
    "numpy==1.26.4",
    "pycparser==2.22",
    "requests==2.32.3",
    "setuptools==75.8.0",
    "urllib3==2.3.0",
    "vulkan==1.3.275.1",
    "zope.event==5.0",
    "zope.interface==7.2"
]

[project.urls]
"Homepage" = "https://github.com/Captainexpo-1/Mistake-Lang"
"Source" = "https://github.com/Captainexpo-1/Mistake-Lang"
"Tracker" = "https://github.com/Captainexpo-1/Mistake-Lang/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
mistake-lang = "mistake.main:main"
